# camera_example

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
ffmpeg_example/: CMakeLists.txt  ffmpeg_codec_example.cpp  ffmpeg_mp42yuv_example.cpp  ffmpeg_mp4bsf_example.cpp  ffmpeg_utility.cpp  ffmpeg_yuv2mp4_example.cpp  readme.md
image/: CMakeLists.txt  jpeg_example.cpp  readme.md  video.flv  yuv_example.cpp
input/: 650_nv12.yuv  650_yuv420p.yuv  readme.md  video_frame_000.yuv  video_h264.h264  video_single_frame.yuv  video_single_frame_gray.yuv
jpeg/: CMakeLists.txt  jpeg_example.cpp
nvidia/: CMakeLists.txt  example.cpp  nv_image_resize.cpp  nvidia_image.cpp  readme.md
nvidia/cuda_memcpy_async/: cuda_memcpy_async.cu
nvidia/cuda_texture/: cuda_texture.cu
nvidia/cudagraph_example/: cuda_graph.cu
nvidia/cudastream_event/: cuda_stream_event.cu  readme.md
nvidia/npp_example/: npp_example.cpp
nvidia/nv_decode/: AppDec.cpp  AppDecUtils.h  FFmpegDemuxer.h  NvDecoder.h
nvidia/resize/: nvjpeg_image_resize.cpp
nvidia/stitch/: stitch.cu
nvidia/undistort/: undistort.cu
src/: main.cpp
v4l2_example/: .gitignore  CMakeLists.txt  readme.md  toolchain.cmake  v4l2_example.cpp
